# vmmd-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/libvirt/: hooks.rs  mod.rs  xml.rs
