[package]
name = "vmmd"
version = "0.1.0"
description = "virtual machine management utilities"
authors = ["Jeff Weber <jweber@cofront.net>"]
edition = "2021"

[dependencies]
hex = "0.4.3"
quick-xml = { version = "0.22", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }