[package]
name = "vmmd"
version = "0.1.0"
description = "virtual machine management utilities"
authors = ["Jeff Weber <jweber@cofront.net>"]
edition = "2021"

[dependencies]
futures = "0.3.17"
futures-util = "0.3.17"
hex = "0.4.3"
quick-xml = { version = "0.22", features = [ "serialize" ] }
#rtnetlink = "0.8.1"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }
rtnetlink = { git = "https://github.com/little-dude/netlink", rev = "8a47322d"}

[patch.crates-io]
netlink-packet-route = { git = "https://github.com/little-dude/netlink"}
netlink-packet-core = { git = "https://github.com/little-dude/netlink"}
netlink-proto = { git = "https://github.com/little-dude/netlink"}
netlink-sys = { git = "https://github.com/little-dude/netlink"}
